--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "tictactoe",
   "version": "0.1.0",
   "description": "",
-  "license": "MIT",
   "scripts": {
     "start": "vite",
     "build": "npm run clear && vite build",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
     "format:lint": "npm run format && npm run lint",
-    "clear": "rimraf dist .parcel-cache"
+    "clear": "rimraf dist"
   },
+  "license": "MIT",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -18,15 +18,16 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "babel-preset-nano-react-app": "^0.1.0",
-    "eslint": "^8.22.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.30.1",
-    "prettier": "^2.7.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "vite": "^3.0.2"
+    "sass": "^1.43.4",
+    "vite": "^2.6.7"
   },
   "babel": {
     "presets": [
